<resources>
    <string name="app_name">BloodBankingApp</string>
    <string name="learn_more">Learn More</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="skip_now">Skip Now</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="signup_info">By clicking continue, you will proceed to the verification</string>
    <string name="continue_btn_label">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verification">Verification</string>
    <string name="verification_subtitle">Enter the 5 digit verification code that has been sent to your email</string>
    <string name="verification_code">Verification Code</string>
    <string name="didn_t_receive_any_code">Didn\'t receive any code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_find_donors">Find Donors</string>
    <string name="title_requests">Requests</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_fragment_title">Requests For Blood</string>
    <string name="request_fragment_subtitle">See received blood request and also check your requests status</string>
    <string name="please">Please</string>
    <string name="request_fragment_info">to access this feature.</string>
    <string name="profile_fragment_subtitle">You can view and edit your profile here</string>
    <string name="fragment_find_donors_title">Find Donors</string>
    <string name="fragment_find_donors_subtitle">Search for blood donors around you</string>
    <string name="location">Location</string>
    <string name="search_donor">Search Donor</string>
    <string name="fragment_donation_title">Donation History</string>
    <string name="fragment_donation_subtitle">Check lastest donations and your donations</string>
    <string name="fragment_history_tab_one">Recent Donations</string>
    <string name="fragment_history_tab_two">Your Donations</string>
    <string name="fragment_donors_list_title">Donors List</string>
    <string name="fragment_donors_list_subtitle">Found 23 donors with A+ blood in your location</string>
    <string name="fragment_requests_tab_one">Received Requests</string>
    <string name="fragment_requests_tab_two">My Requests</string>
    <string name="fragment_add_request_btn_label">Request For Blood</string>
    <string name="fragment_add_request_subtitle">Request for blood whenever wherever you want</string>
    <string name="fragment_add_request_title">Request For Blood</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="username">Username*</string>
    <string name="fullname">Fullname*</string>
    <string name="contact">Contact*</string>
    <string name="blood_group">Blood Group</string>
</resources>