<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_menu_find_donors"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/title_find_donors"/>
    <item
        android:id="@+id/nav_menu_requests"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/title_requests"/>

    <item
        android:id="@+id/nav_menu_history"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/nav_menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="@string/title_profile" />
</menu>
