<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.FindDonorsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/fragment_find_donors_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_find_donors_subtitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Choose Blood Group"
        android:layout_marginBottom="12dp"
        android:textColor="#333333" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        >

        <TableRow android:background="@drawable/border_shadow">

            <android.widget.Button
                android:background="@color/white"
                android:text="A+" />

            <android.widget.Button
                android:background="@color/white"
                android:text="A-" />

            <android.widget.Button
                android:background="@color/white"
                android:text="B+" />

            <android.widget.Button
                android:background="@color/white"
                android:text="B-" />


        </TableRow>

        <TableRow android:background="@drawable/border_shadow">


            <android.widget.Button
                android:background="@color/white"
                android:text="AB+" />

            <android.widget.Button
                android:background="@color/white"
                android:text="AB-" />

            <android.widget.Button
                android:background="@color/white"
                android:text="O+" />

            <android.widget.Button
                android:background="@color/white"
                android:text="O-" />

        </TableRow>

    </TableLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        android:layout_marginBottom="12dp"
        android:textColor="#333333" />

    <Spinner
        android:background="@drawable/border_shadow"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <android.widget.Button
        android:id="@+id/search_donor_btn"
        android:layout_marginTop="32dp"
        android:height="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/primary_main"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_donor"
        />


</LinearLayout>